# MSPM0-DevKit

./: .gitignore  README.md
GPIO/: CMakeLists.txt  GPIO.syscfg  syscfg.bat
GPIO/BSP/src/: oled.c
GPIO/Core/inc/: ti_msp_dl_config.h
GPIO/Core/src/: main.c  ti_msp_dl_config.c
GPIO/Driver/ti/driverlib/.meta/: AES.syscfg.js  AESADV.syscfg.js  NONMAIN.syscfg.js  RTC.syscfg.js  SPI.syscfg.js  SYSCTL.syscfg.js  TRNG.syscfg.js  UART.syscfg.js  WWDT.syscfg.js
GPIO/Driver/ti/driverlib/.meta/pwm/: PWMTimerCC.syscfg.js
GPIO/keil/: GPIO.uvoptx  GPIO.uvprojx
OLED/: CMakeLists.txt  OLED.syscfg
OLED/BSP/inc/: bmp.h  oled.h  oledfont.h
OLED/BSP/src/: oled.c
OLED/Core/inc/: ti_msp_dl_config.h
OLED/Core/src/: GPIO.syscfg  main.c  ti_msp_dl_config.c
OLED/keil/: OLED.uvoptx  OLED.uvprojx
UART/: .gitignore  CMakeLists.txt  vofa+.tabviews.json
UART/BSP/Inc/: oled.h
UART/Core/Inc/: ti_msp_dl_config.h
UART/Core/Src/: empty.c  ti_msp_dl_config.c
UART/Driver/ti/devices/msp/m0p/: mspm0g110x.h  mspm0g150x.h  mspm0g310x.h  mspm0g350x.h  mspm0l110x.h  mspm0l134x.h
UART/Driver/ti/devices/msp/peripherals/: hw_adc12.h  hw_aes.h  hw_comp.h  hw_dac12.h  hw_dma.h  hw_flashctl.h  hw_gpio.h  hw_gptimer.h  hw_i2c.h  hw_iomux.h  hw_mcan.h  hw_rtc.h  hw_spi.h  hw_trng.h  hw_uart.h  hw_vref.h  hw_wwdt.h
UART/Driver/ti/devices/msp/peripherals/m0p/: hw_cpuss.h  hw_debugss.h  hw_factoryregion.h
UART/Driver/ti/devices/msp/peripherals/m0p/sysctl/: hw_sysctl_mspm0g1x0x_g3x0x.h  hw_sysctl_mspm0l11xx_l13xx.h
UART/Driver/ti/driverlib/: dl_adc12.h  dl_aes.c  dl_aes.h  dl_comp.h  dl_crc.h  dl_dac12.h  dl_dma.h  dl_flashctl.c  dl_flashctl.h  dl_gpio.h  dl_i2c.h  dl_mathacl.h  dl_mcan.c  dl_mcan.h  dl_opa.c  dl_opa.h  dl_rtc.h  dl_spi.c  dl_spi.h  dl_timer.c  dl_timer.h  dl_timera.h  dl_timerg.h  dl_trng.c  dl_trng.h  dl_uart.c  dl_uart.h  dl_uart_extend.h  dl_wwdt.h  driverlib.h
UART/Driver/ti/driverlib/m0p/: dl_interrupt.c  dl_systick.h
UART/Driver/ti/driverlib/m0p/sysctl/: dl_sysctl_mspm0g1x0x_g3x0x.c  dl_sysctl_mspm0g1x0x_g3x0x.h  dl_sysctl_mspm0l11xx_l13xx.c  dl_sysctl_mspm0l11xx_l13xx.h
docs/: Hardware_Description.md  README.md  _sidebar.md  index.html
docs/Contribution_Guidelines/: _sidebar.md
docs/Developer_Guidelines/: Coding_Style.md  Files_Compile.md  New_Poroject.md  New_Project.md  README.md
docs/Development_Env/: Keil.md  README.md  SDK.md  SysConfig.md  VSCode.md  _sidebar.md
docs/Examples/: GPIO.md  README.md  UART.md
docs/Issue/: Download_Error.md  README.md
docs/Workflow/: Keil.md  README.md  SysConfig.md  VSCode.md  _sidebar.md
empty_project/: Event.dot  README.md  move_file.bat  project.syscfg  syscfg.bat
empty_project/Core/inc/: ti_msp_dl_config.h
empty_project/Core/src/: main.c  ti_msp_dl_config.c
empty_project/keil/: project.uvprojx
empty_project/toolchains/: gcc-arm-none-eabi.cmake
